Fix gap in projects section

--- a/src/Components/Projects.scss
+++ b/src/Components/Projects.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 
 #projects-container {
-  margin-top: 50px;
+  margin-top: 3px;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
